common io added